syntax = "proto3";

package greet_4_20;
//THIS IS FOR CODE GENERATION
option go_package="greet_4_20/greetpb";





message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}
service GreetService{
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}
